Jaideep | UI fixes: Added custom logo, tweaked form fields spacing

--- a/modules/openlmis-web/src/main/webapp/public/css/content.css
+++ b/modules/openlmis-web/src/main/webapp/public/css/content.css
@@ -43,7 +43,7 @@
 }
 
 .form-row {
-  padding: 10px;
+  padding: 6px 10px;
   margin: 5px 0;
 }
 .form-row.error {
